# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "bazel_ros_demo",
    version = "0.0.1",
    compatibility_level = 0,
)

# System dependencies

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "cmake_configure_file", version = "0.1.3")
bazel_dep(name = "google_benchmark", version = "1.9.4")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "rules_rust", version = "0.64.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

# Third party (things we intend to add to the BCR)

bazel_dep(name = "cyclonedds", version = "0.10.5")
bazel_dep(name = "fastcdr", version = "2.3.0")
bazel_dep(name = "fastdds", version = "3.2.2")
bazel_dep(name = "iceoryx", version = "2.0.5")
bazel_dep(name = "liburcu", version = "0.15.3")
bazel_dep(name = "lttng-ust", version = "2.14.0")
bazel_dep(name = "mimick", version = "0.9.0")
bazel_dep(name = "zenoh-c", version = "1.4.0")
bazel_dep(name = "zenoh-cpp", version = "1.4.0")

# Dependencies for a specific rolling snapshot

bazel_dep(name = "rosdistro", version = "rolling-2025-09-05")

# ROS packages (things we intend to add to the RCR)

bazel_dep(name = "action_msgs", version = "2.4.1")
bazel_dep(name = "ament_clang_format", version = "0.20.1")
bazel_dep(name = "ament_clang_tidy", version = "0.20.1")
bazel_dep(name = "ament_cmake_auto", version = "2.8.4")
bazel_dep(name = "ament_cmake_clang_format", version = "0.20.1")
bazel_dep(name = "ament_cmake_clang_tidy", version = "0.20.1")
bazel_dep(name = "ament_cmake_copyright", version = "0.20.1")
bazel_dep(name = "ament_cmake_core", version = "2.8.4")
bazel_dep(name = "ament_cmake_cppcheck", version = "0.20.1")
bazel_dep(name = "ament_cmake_cpplint", version = "0.20.1")
bazel_dep(name = "ament_cmake_export_definitions", version = "2.8.4")
bazel_dep(name = "ament_cmake_export_dependencies", version = "2.8.4")
bazel_dep(name = "ament_cmake_export_include_directories", version = "2.8.4")
bazel_dep(name = "ament_cmake_export_libraries", version = "2.8.4")
bazel_dep(name = "ament_cmake_export_link_flags", version = "2.8.4")
bazel_dep(name = "ament_cmake_export_targets", version = "2.8.4")
bazel_dep(name = "ament_cmake_flake8", version = "0.20.1")
bazel_dep(name = "ament_cmake_gen_version_h", version = "2.8.4")
bazel_dep(name = "ament_cmake_gmock", version = "2.8.4")
bazel_dep(name = "ament_cmake_google_benchmark", version = "2.8.4")
bazel_dep(name = "ament_cmake_gtest", version = "2.8.4")
bazel_dep(name = "ament_cmake_include_directories", version = "2.8.4")
bazel_dep(name = "ament_cmake_libraries", version = "2.8.4")
bazel_dep(name = "ament_cmake_lint_cmake", version = "0.20.1")
bazel_dep(name = "ament_cmake_mypy", version = "0.20.1")
bazel_dep(name = "ament_cmake_pclint", version = "0.20.1")
bazel_dep(name = "ament_cmake_pep257", version = "0.20.1")
bazel_dep(name = "ament_cmake_pycodestyle", version = "0.20.1")
bazel_dep(name = "ament_cmake_pyflakes", version = "0.20.1")
bazel_dep(name = "ament_cmake_pytest", version = "2.8.4")
bazel_dep(name = "ament_cmake_python", version = "2.8.4")
bazel_dep(name = "ament_cmake_ros_core", version = "0.15.1")
bazel_dep(name = "ament_cmake_ros", version = "0.15.1")
bazel_dep(name = "ament_cmake_target_dependencies", version = "2.8.4")
bazel_dep(name = "ament_cmake_test", version = "2.8.4")
bazel_dep(name = "ament_cmake_uncrustify", version = "0.20.1")
bazel_dep(name = "ament_cmake_vendor_package", version = "2.8.4")
bazel_dep(name = "ament_cmake_version", version = "2.8.4")
bazel_dep(name = "ament_cmake_xmllint", version = "0.20.1")
bazel_dep(name = "ament_cmake", version = "2.8.4")
bazel_dep(name = "ament_copyright", version = "0.20.1")
bazel_dep(name = "ament_cppcheck", version = "0.20.1")
bazel_dep(name = "ament_cpplint", version = "0.20.1")
bazel_dep(name = "ament_flake8", version = "0.20.1")
bazel_dep(name = "ament_index_cpp", version = "1.12.0")
bazel_dep(name = "ament_index_python", version = "1.12.0")
bazel_dep(name = "ament_lint_auto", version = "0.20.1")
bazel_dep(name = "ament_lint_cmake", version = "0.20.1")
bazel_dep(name = "ament_lint_common", version = "0.20.1")
bazel_dep(name = "ament_lint", version = "0.20.1")
bazel_dep(name = "ament_mypy", version = "0.20.1")
bazel_dep(name = "ament_package", version = "0.18.0")
bazel_dep(name = "ament_pclint", version = "0.20.1")
bazel_dep(name = "ament_pep257", version = "0.20.1")
bazel_dep(name = "ament_pycodestyle", version = "0.20.1")
bazel_dep(name = "ament_pyflakes", version = "0.20.1")
bazel_dep(name = "ament_uncrustify", version = "0.20.1")
bazel_dep(name = "ament_xmllint", version = "0.20.1")
bazel_dep(name = "builtin_interfaces", version = "2.4.1")
bazel_dep(name = "class_loader", version = "2.9.0")
bazel_dep(name = "common_interfaces", version = "5.8.1")
bazel_dep(name = "composition_interfaces", version = "2.4.1")
bazel_dep(name = "console_bridge_vendor", version = "1.9.1")
bazel_dep(name = "desktop_full", version = "0.13.0")
bazel_dep(name = "desktop", version = "0.13.0")
bazel_dep(name = "diagnostic_msgs", version = "5.8.1")
bazel_dep(name = "domain_coordinator", version = "0.15.1")
bazel_dep(name = "examples_tf2_py", version = "0.43.0")
bazel_dep(name = "geometry_msgs", version = "5.8.1")
bazel_dep(name = "geometry2", version = "0.43.0")
bazel_dep(name = "launch_pytest", version = "3.9.1")
bazel_dep(name = "launch_ros", version = "0.29.1")
bazel_dep(name = "launch_testing_ament_cmake", version = "3.9.1")
bazel_dep(name = "launch_testing_ros", version = "0.29.1")
bazel_dep(name = "launch_testing", version = "3.9.1")
bazel_dep(name = "launch_xml", version = "3.9.1")
bazel_dep(name = "launch_yaml", version = "3.9.1")
bazel_dep(name = "launch", version = "3.9.1")
bazel_dep(name = "libstatistics_collector", version = "2.1.1")
bazel_dep(name = "lifecycle_msgs", version = "2.4.1")
bazel_dep(name = "lttngpy", version = "8.8.0")
bazel_dep(name = "nav_msgs", version = "5.8.1")
bazel_dep(name = "osrf_pycommon", version = "2.1.4")
bazel_dep(name = "osrf_testing_tools_cpp", version = "2.3.0")
bazel_dep(name = "perception", version = "0.13.0")
bazel_dep(name = "performance_test_fixture", version = "0.4.0")
bazel_dep(name = "pluginlib", version = "5.7.0")
bazel_dep(name = "rcl_action", version = "10.2.2")
bazel_dep(name = "rcl_interfaces", version = "2.4.1")
bazel_dep(name = "rcl_lifecycle", version = "10.2.2")
bazel_dep(name = "rcl_logging_interface", version = "3.3.0")
bazel_dep(name = "rcl_logging_noop", version = "3.3.0")
bazel_dep(name = "rcl_logging_spdlog", version = "3.3.0")
bazel_dep(name = "rcl_yaml_param_parser", version = "10.2.2")
bazel_dep(name = "rcl", version = "10.2.2")
bazel_dep(name = "rclcpp_action", version = "30.0.0")
bazel_dep(name = "rclcpp_components", version = "30.0.0")
bazel_dep(name = "rclcpp_lifecycle", version = "30.0.0")
bazel_dep(name = "rclcpp", version = "30.0.0")
bazel_dep(name = "rcpputils", version = "2.14.2")
bazel_dep(name = "rcutils", version = "7.0.0")
bazel_dep(name = "rmw_connextdds_common", version = "1.2.1")
bazel_dep(name = "rmw_connextdds", version = "1.2.1")
bazel_dep(name = "rmw_connextddsmicro", version = "1.2.1")
bazel_dep(name = "rmw_cyclonedds_cpp", version = "4.1.1")
bazel_dep(name = "rmw_dds_common", version = "4.0.0")
bazel_dep(name = "rmw_fastrtps_cpp", version = "9.4.1")
bazel_dep(name = "rmw_fastrtps_dynamic_cpp", version = "9.4.1")
bazel_dep(name = "rmw_fastrtps_shared_cpp", version = "9.4.1")
bazel_dep(name = "rmw_implementation_cmake", version = "7.9.0")
bazel_dep(name = "rmw_implementation", version = "3.1.1")
bazel_dep(name = "rmw_security_common", version = "7.9.0")
bazel_dep(name = "rmw_test_fixture_implementation", version = "0.15.1")
bazel_dep(name = "rmw_test_fixture", version = "0.15.1")
bazel_dep(name = "rmw_zenoh_cpp", version = "0.8.1")
bazel_dep(name = "rmw", version = "7.9.0")
bazel_dep(name = "ros_base", version = "0.13.0")
bazel_dep(name = "ros_core", version = "0.13.0")
bazel_dep(name = "ros_environment", version = "4.4.1")
bazel_dep(name = "ros_testing", version = "0.9.0")
bazel_dep(name = "ros2action", version = "0.39.2")
bazel_dep(name = "ros2cli_common_extensions", version = "0.5.1")
bazel_dep(name = "ros2cli_test_interfaces", version = "0.39.2")
bazel_dep(name = "ros2cli", version = "0.39.2")
bazel_dep(name = "ros2component", version = "0.39.2")
bazel_dep(name = "ros2doctor", version = "0.39.2")
bazel_dep(name = "ros2interface", version = "0.39.2")
bazel_dep(name = "ros2launch", version = "0.29.1")
bazel_dep(name = "ros2lifecycle_test_fixtures", version = "0.39.2")
bazel_dep(name = "ros2lifecycle", version = "0.39.2")
bazel_dep(name = "ros2multicast", version = "0.39.2")
bazel_dep(name = "ros2node", version = "0.39.2")
bazel_dep(name = "ros2param", version = "0.39.2")
bazel_dep(name = "ros2pkg", version = "0.39.2")
bazel_dep(name = "ros2run", version = "0.39.2")
bazel_dep(name = "ros2service", version = "0.39.2")
bazel_dep(name = "ros2test", version = "0.9.0")
bazel_dep(name = "ros2topic", version = "0.39.2")
bazel_dep(name = "ros2trace", version = "8.8.0")
bazel_dep(name = "rosgraph_msgs", version = "2.4.1")
bazel_dep(name = "rosidl_adapter_proto", version = "0.0.1")
bazel_dep(name = "rosidl_adapter", version = "5.0.0")
bazel_dep(name = "rosidl_cli", version = "5.0.0")
bazel_dep(name = "rosidl_cmake", version = "5.0.0")
bazel_dep(name = "rosidl_core_generators", version = "0.4.0")
bazel_dep(name = "rosidl_core_runtime", version = "0.4.0")
bazel_dep(name = "rosidl_default_generators", version = "1.8.1")
bazel_dep(name = "rosidl_default_runtime", version = "1.8.1")
bazel_dep(name = "rosidl_dynamic_typesupport_fastrtps", version = "0.5.0")
bazel_dep(name = "rosidl_dynamic_typesupport", version = "0.4.0")
bazel_dep(name = "rosidl_generator_c", version = "5.0.0")
bazel_dep(name = "rosidl_generator_cpp", version = "5.0.0")
bazel_dep(name = "rosidl_generator_py", version = "0.25.0")
bazel_dep(name = "rosidl_generator_tests", version = "5.0.0")
bazel_dep(name = "rosidl_generator_type_description", version = "5.0.0")
bazel_dep(name = "rosidl_parser", version = "5.0.0")
bazel_dep(name = "rosidl_pycommon", version = "5.0.0")
bazel_dep(name = "rosidl_runtime_c", version = "5.0.0")
bazel_dep(name = "rosidl_runtime_cpp", version = "5.0.0")
bazel_dep(name = "rosidl_runtime_py", version = "0.15.0")
bazel_dep(name = "rosidl_typeadapter_protobuf_test", version = "0.0.1")
bazel_dep(name = "rosidl_typesupport_c", version = "3.4.0")
bazel_dep(name = "rosidl_typesupport_cpp", version = "3.4.0")
bazel_dep(name = "rosidl_typesupport_fastrtps_c", version = "3.9.0")
bazel_dep(name = "rosidl_typesupport_fastrtps_cpp", version = "3.9.0")
bazel_dep(name = "rosidl_typesupport_interface", version = "5.0.0")
bazel_dep(name = "rosidl_typesupport_introspection_c", version = "5.0.0")
bazel_dep(name = "rosidl_typesupport_introspection_cpp", version = "5.0.0")
bazel_dep(name = "rosidl_typesupport_introspection_tests", version = "5.0.0")
bazel_dep(name = "rosidl_typesupport_protobuf_c", version = "0.0.1")
bazel_dep(name = "rosidl_typesupport_protobuf_cpp", version = "0.0.1")
bazel_dep(name = "rosidl_typesupport_protobuf", version = "0.0.1")
bazel_dep(name = "rosidl_typesupport_tests", version = "3.4.0")
bazel_dep(name = "rpyutils", version = "0.7.0")
bazel_dep(name = "rti_connext_dds_cmake_module", version = "1.2.1")
bazel_dep(name = "sensor_msgs_py", version = "5.8.1")
bazel_dep(name = "sensor_msgs", version = "5.8.1")
bazel_dep(name = "service_msgs", version = "2.4.1")
bazel_dep(name = "shape_msgs", version = "5.8.1")
bazel_dep(name = "simulation", version = "0.13.0")
bazel_dep(name = "sros2_cmake", version = "0.16.1")
bazel_dep(name = "sros2", version = "0.16.1")
bazel_dep(name = "statistics_msgs", version = "2.4.1")
bazel_dep(name = "std_msgs", version = "5.8.1")
bazel_dep(name = "std_srvs", version = "5.8.1")
bazel_dep(name = "stereo_msgs", version = "5.8.1")
bazel_dep(name = "test_interface_files", version = "0.14.1")
bazel_dep(name = "test_launch_ros", version = "0.29.1")
bazel_dep(name = "test_launch_testing", version = "3.9.1")
bazel_dep(name = "test_msgs", version = "2.4.1")
bazel_dep(name = "test_osrf_testing_tools_cpp", version = "2.3.0")
bazel_dep(name = "test_rmw_implementation", version = "3.1.1")
bazel_dep(name = "test_ros2trace", version = "8.8.0")
bazel_dep(name = "test_tf2", version = "0.43.0")
bazel_dep(name = "test_tracetools_launch", version = "8.8.0")
bazel_dep(name = "test_tracetools", version = "8.8.0")
bazel_dep(name = "tf2_bullet", version = "0.43.0")
bazel_dep(name = "tf2_eigen_kdl", version = "0.43.0")
bazel_dep(name = "tf2_eigen", version = "0.43.0")
bazel_dep(name = "tf2_geometry_msgs", version = "0.43.0")
bazel_dep(name = "tf2_kdl", version = "0.43.0")
bazel_dep(name = "tf2_msgs", version = "0.43.0")
bazel_dep(name = "tf2_py", version = "0.43.0")
bazel_dep(name = "tf2_ros_py", version = "0.43.0")
bazel_dep(name = "tf2_ros", version = "0.43.0")
bazel_dep(name = "tf2_sensor_msgs", version = "0.43.0")
bazel_dep(name = "tf2_tools", version = "0.43.0")
bazel_dep(name = "tf2", version = "0.43.0")
bazel_dep(name = "tracetools_launch", version = "8.8.0")
bazel_dep(name = "tracetools_read", version = "8.8.0")
bazel_dep(name = "tracetools_test", version = "8.8.0")
bazel_dep(name = "tracetools_trace", version = "8.8.0")
bazel_dep(name = "tracetools", version = "8.8.0")
bazel_dep(name = "trajectory_msgs", version = "5.8.1")
bazel_dep(name = "type_description_interfaces", version = "2.4.1")
bazel_dep(name = "unique_identifier_msgs", version = "2.8.0")
bazel_dep(name = "visualization_msgs", version = "5.8.1")
bazel_dep(name = "zenoh_security_tools", version = "0.8.1")

# Overrides (enable these for development)

local_path_override(module_name = "cyclonedds", path = "./thirdparty/cyclonedds")
local_path_override(module_name = "fastcdr", path = "./thirdparty/fastcdr")
local_path_override(module_name = "fastdds", path = "./thirdparty/fastdds")
local_path_override(module_name = "iceoryx", path = "./thirdparty/iceoryx")
local_path_override(module_name = "liburcu", path = "./thirdparty/liburcu")
local_path_override(module_name = "lttng-ust", path = "./thirdparty/lttng-ust")
local_path_override(module_name = "mimick", path = "./thirdparty/mimick")
local_path_override(module_name = "zenoh-c", path = "./thirdparty/zenoh-c")
local_path_override(module_name = "zenoh-cpp", path = "./thirdparty/zenoh-cpp")

local_path_override(module_name = "action_msgs", path = "./submodules/rcl_interfaces/action_msgs")
local_path_override(module_name = "ament_clang_format", path = "./submodules/ament_lint/ament_clang_format")
local_path_override(module_name = "ament_clang_tidy", path = "./submodules/ament_lint/ament_clang_tidy")
local_path_override(module_name = "ament_cmake_auto", path = "./submodules/ament_cmake/ament_cmake_auto")
local_path_override(module_name = "ament_cmake_clang_format", path = "./submodules/ament_lint/ament_cmake_clang_format")
local_path_override(module_name = "ament_cmake_clang_tidy", path = "./submodules/ament_lint/ament_cmake_clang_tidy")
local_path_override(module_name = "ament_cmake_copyright", path = "./submodules/ament_lint/ament_cmake_copyright")
local_path_override(module_name = "ament_cmake_core", path = "./submodules/ament_cmake/ament_cmake_core")
local_path_override(module_name = "ament_cmake_cppcheck", path = "./submodules/ament_lint/ament_cmake_cppcheck")
local_path_override(module_name = "ament_cmake_cpplint", path = "./submodules/ament_lint/ament_cmake_cpplint")
local_path_override(module_name = "ament_cmake_export_definitions", path = "./submodules/ament_cmake/ament_cmake_export_definitions")
local_path_override(module_name = "ament_cmake_export_dependencies", path = "./submodules/ament_cmake/ament_cmake_export_dependencies")
local_path_override(module_name = "ament_cmake_export_include_directories", path = "./submodules/ament_cmake/ament_cmake_export_include_directories")
local_path_override(module_name = "ament_cmake_export_libraries", path = "./submodules/ament_cmake/ament_cmake_export_libraries")
local_path_override(module_name = "ament_cmake_export_link_flags", path = "./submodules/ament_cmake/ament_cmake_export_link_flags")
local_path_override(module_name = "ament_cmake_export_targets", path = "./submodules/ament_cmake/ament_cmake_export_targets")
local_path_override(module_name = "ament_cmake_flake8", path = "./submodules/ament_lint/ament_cmake_flake8")
local_path_override(module_name = "ament_cmake_gen_version_h", path = "./submodules/ament_cmake/ament_cmake_gen_version_h")
local_path_override(module_name = "ament_cmake_gmock", path = "./submodules/ament_cmake/ament_cmake_gmock")
local_path_override(module_name = "ament_cmake_google_benchmark", path = "./submodules/ament_cmake/ament_cmake_google_benchmark")
local_path_override(module_name = "ament_cmake_gtest", path = "./submodules/ament_cmake/ament_cmake_gtest")
local_path_override(module_name = "ament_cmake_include_directories", path = "./submodules/ament_cmake/ament_cmake_include_directories")
local_path_override(module_name = "ament_cmake_libraries", path = "./submodules/ament_cmake/ament_cmake_libraries")
local_path_override(module_name = "ament_cmake_lint_cmake", path = "./submodules/ament_lint/ament_cmake_lint_cmake")
local_path_override(module_name = "ament_cmake_mypy", path = "./submodules/ament_lint/ament_cmake_mypy")
local_path_override(module_name = "ament_cmake_pclint", path = "./submodules/ament_lint/ament_cmake_pclint")
local_path_override(module_name = "ament_cmake_pep257", path = "./submodules/ament_lint/ament_cmake_pep257")
local_path_override(module_name = "ament_cmake_pycodestyle", path = "./submodules/ament_lint/ament_cmake_pycodestyle")
local_path_override(module_name = "ament_cmake_pyflakes", path = "./submodules/ament_lint/ament_cmake_pyflakes")
local_path_override(module_name = "ament_cmake_pytest", path = "./submodules/ament_cmake/ament_cmake_pytest")
local_path_override(module_name = "ament_cmake_python", path = "./submodules/ament_cmake/ament_cmake_python")
local_path_override(module_name = "ament_cmake_ros_core", path = "./submodules/ament_cmake_ros/ament_cmake_ros_core")
local_path_override(module_name = "ament_cmake_ros", path = "./submodules/ament_cmake_ros/ament_cmake_ros")
local_path_override(module_name = "ament_cmake_target_dependencies", path = "./submodules/ament_cmake/ament_cmake_target_dependencies")
local_path_override(module_name = "ament_cmake_test", path = "./submodules/ament_cmake/ament_cmake_test")
local_path_override(module_name = "ament_cmake_uncrustify", path = "./submodules/ament_lint/ament_cmake_uncrustify")
local_path_override(module_name = "ament_cmake_vendor_package", path = "./submodules/ament_cmake/ament_cmake_vendor_package")
local_path_override(module_name = "ament_cmake_version", path = "./submodules/ament_cmake/ament_cmake_version")
local_path_override(module_name = "ament_cmake_xmllint", path = "./submodules/ament_lint/ament_cmake_xmllint")
local_path_override(module_name = "ament_cmake", path = "./submodules/ament_cmake/ament_cmake")
local_path_override(module_name = "ament_copyright", path = "./submodules/ament_lint/ament_copyright")
local_path_override(module_name = "ament_cppcheck", path = "./submodules/ament_lint/ament_cppcheck")
local_path_override(module_name = "ament_cpplint", path = "./submodules/ament_lint/ament_cpplint")
local_path_override(module_name = "ament_flake8", path = "./submodules/ament_lint/ament_flake8")
local_path_override(module_name = "ament_index_cpp", path = "./submodules/ament_index/ament_index_cpp")
local_path_override(module_name = "ament_index_python", path = "./submodules/ament_index/ament_index_python")
local_path_override(module_name = "ament_lint_auto", path = "./submodules/ament_lint/ament_lint_auto")
local_path_override(module_name = "ament_lint_cmake", path = "./submodules/ament_lint/ament_lint_cmake")
local_path_override(module_name = "ament_lint_common", path = "./submodules/ament_lint/ament_lint_common")
local_path_override(module_name = "ament_lint", path = "./submodules/ament_lint/ament_lint")
local_path_override(module_name = "ament_mypy", path = "./submodules/ament_lint/ament_mypy")
local_path_override(module_name = "ament_package", path = "./submodules/ament_package")
local_path_override(module_name = "ament_pclint", path = "./submodules/ament_lint/ament_pclint")
local_path_override(module_name = "ament_pep257", path = "./submodules/ament_lint/ament_pep257")
local_path_override(module_name = "ament_pycodestyle", path = "./submodules/ament_lint/ament_pycodestyle")
local_path_override(module_name = "ament_pyflakes", path = "./submodules/ament_lint/ament_pyflakes")
local_path_override(module_name = "ament_uncrustify", path = "./submodules/ament_lint/ament_uncrustify")
local_path_override(module_name = "ament_xmllint", path = "./submodules/ament_lint/ament_xmllint")
local_path_override(module_name = "builtin_interfaces", path = "./submodules/rcl_interfaces/builtin_interfaces")
local_path_override(module_name = "class_loader", path = "./submodules/class_loader")
local_path_override(module_name = "common_interfaces", path = "./submodules/common_interfaces/common_interfaces")
local_path_override(module_name = "composition_interfaces", path = "./submodules/rcl_interfaces/composition_interfaces")
local_path_override(module_name = "console_bridge_vendor", path = "./submodules/console_bridge_vendor")
local_path_override(module_name = "desktop_full", path = "./submodules/variants/desktop_full")
local_path_override(module_name = "desktop", path = "./submodules/variants/desktop")
local_path_override(module_name = "diagnostic_msgs", path = "./submodules/common_interfaces/diagnostic_msgs")
local_path_override(module_name = "domain_coordinator", path = "./submodules/ament_cmake_ros/domain_coordinator")
local_path_override(module_name = "examples_tf2_py", path = "./submodules/geometry2/examples_tf2_py")
local_path_override(module_name = "geometry_msgs", path = "./submodules/common_interfaces/geometry_msgs")
local_path_override(module_name = "geometry2", path = "./submodules/geometry2/geometry2")
local_path_override(module_name = "launch_pytest", path = "./submodules/launch/launch_pytest")
local_path_override(module_name = "launch_ros", path = "./submodules/launch_ros/launch_ros")
local_path_override(module_name = "launch_testing_ament_cmake", path = "./submodules/launch/launch_testing_ament_cmake")
local_path_override(module_name = "launch_testing_ros", path = "./submodules/launch_ros/launch_testing_ros")
local_path_override(module_name = "launch_testing", path = "./submodules/launch/launch_testing")
local_path_override(module_name = "launch_xml", path = "./submodules/launch/launch_xml")
local_path_override(module_name = "launch_yaml", path = "./submodules/launch/launch_yaml")
local_path_override(module_name = "launch", path = "./submodules/launch/launch")
local_path_override(module_name = "libstatistics_collector", path = "./submodules/libstatistics_collector")
local_path_override(module_name = "lifecycle_msgs", path = "./submodules/rcl_interfaces/lifecycle_msgs")
local_path_override(module_name = "lttngpy", path = "./submodules/ros2_tracing/lttngpy")
local_path_override(module_name = "nav_msgs", path = "./submodules/common_interfaces/nav_msgs")
local_path_override(module_name = "osrf_pycommon", path = "./submodules/osrf_pycommon")
local_path_override(module_name = "osrf_testing_tools_cpp", path = "./submodules/osrf_testing_tools_cpp/osrf_testing_tools_cpp")
local_path_override(module_name = "perception", path = "./submodules/variants/perception")
local_path_override(module_name = "performance_test_fixture", path = "./submodules/performance_test_fixture")
local_path_override(module_name = "pluginlib", path = "./submodules/pluginlib")
local_path_override(module_name = "rcl_action", path = "./submodules/rcl/rcl_action")
local_path_override(module_name = "rcl_interfaces", path = "./submodules/rcl_interfaces/rcl_interfaces")
local_path_override(module_name = "rcl_lifecycle", path = "./submodules/rcl/rcl_lifecycle")
local_path_override(module_name = "rcl_logging_interface", path = "./submodules/rcl_logging/rcl_logging_interface")
local_path_override(module_name = "rcl_logging_noop", path = "./submodules/rcl_logging/rcl_logging_noop")
local_path_override(module_name = "rcl_logging_spdlog", path = "./submodules/rcl_logging/rcl_logging_spdlog")
local_path_override(module_name = "rcl_yaml_param_parser", path = "./submodules/rcl/rcl_yaml_param_parser")
local_path_override(module_name = "rcl", path = "./submodules/rcl/rcl")
local_path_override(module_name = "rclcpp_action", path = "./submodules/rclcpp/rclcpp_action")
local_path_override(module_name = "rclcpp_components", path = "./submodules/rclcpp/rclcpp_components")
local_path_override(module_name = "rclcpp_lifecycle", path = "./submodules/rclcpp/rclcpp_lifecycle")
local_path_override(module_name = "rclcpp", path = "./submodules/rclcpp/rclcpp")
local_path_override(module_name = "rcpputils", path = "./submodules/rcpputils")
local_path_override(module_name = "rcutils", path = "./submodules/rcutils")
local_path_override(module_name = "rmw_connextdds_common", path = "./submodules/rmw_connextdds/rmw_connextdds_common")
local_path_override(module_name = "rmw_connextdds", path = "./submodules/rmw_connextdds/rmw_connextdds")
local_path_override(module_name = "rmw_connextddsmicro", path = "./submodules/rmw_connextdds/rmw_connextddsmicro")
local_path_override(module_name = "rmw_cyclonedds_cpp", path = "./submodules/rmw_cyclonedds/rmw_cyclonedds_cpp")
local_path_override(module_name = "rmw_dds_common", path = "./submodules/rmw_dds_common/rmw_dds_common")
local_path_override(module_name = "rmw_fastrtps_cpp", path = "./submodules/rmw_fastrtps/rmw_fastrtps_cpp")
local_path_override(module_name = "rmw_fastrtps_dynamic_cpp", path = "./submodules/rmw_fastrtps/rmw_fastrtps_dynamic_cpp")
local_path_override(module_name = "rmw_fastrtps_shared_cpp", path = "./submodules/rmw_fastrtps/rmw_fastrtps_shared_cpp")
local_path_override(module_name = "rmw_implementation_cmake", path = "./submodules/rmw/rmw_implementation_cmake")
local_path_override(module_name = "rmw_implementation", path = "./submodules/rmw_implementation/rmw_implementation")
local_path_override(module_name = "rmw_security_common", path = "./submodules/rmw/rmw_security_common")
local_path_override(module_name = "rmw_test_fixture_implementation", path = "./submodules/ament_cmake_ros/rmw_test_fixture_implementation")
local_path_override(module_name = "rmw_test_fixture", path = "./submodules/ament_cmake_ros/rmw_test_fixture")
local_path_override(module_name = "rmw_zenoh_cpp", path = "./submodules/rmw_zenoh/rmw_zenoh_cpp")
local_path_override(module_name = "rmw", path = "./submodules/rmw/rmw")
local_path_override(module_name = "ros_base", path = "./submodules/variants/ros_base")
local_path_override(module_name = "ros_core", path = "./submodules/variants/ros_core")
local_path_override(module_name = "ros_environment", path = "./submodules/ros_environment")
local_path_override(module_name = "ros_testing", path = "./submodules/ros_testing/ros_testing")
local_path_override(module_name = "rosdistro", path = "./submodules/rosdistro")
local_path_override(module_name = "ros2action", path = "./submodules/ros2cli/ros2action")
local_path_override(module_name = "ros2cli_common_extensions", path = "./submodules/ros2cli_common_extensions/ros2cli_common_extensions")
local_path_override(module_name = "ros2cli_test_interfaces", path = "./submodules/ros2cli/ros2cli_test_interfaces")
local_path_override(module_name = "ros2cli", path = "./submodules/ros2cli/ros2cli")
local_path_override(module_name = "ros2component", path = "./submodules/ros2cli/ros2component")
local_path_override(module_name = "ros2doctor", path = "./submodules/ros2cli/ros2doctor")
local_path_override(module_name = "ros2interface", path = "./submodules/ros2cli/ros2interface")
local_path_override(module_name = "ros2launch", path = "./submodules/launch_ros/ros2launch")
local_path_override(module_name = "ros2lifecycle_test_fixtures", path = "./submodules/ros2cli/ros2lifecycle_test_fixtures")
local_path_override(module_name = "ros2lifecycle", path = "./submodules/ros2cli/ros2lifecycle")
local_path_override(module_name = "ros2multicast", path = "./submodules/ros2cli/ros2multicast")
local_path_override(module_name = "ros2node", path = "./submodules/ros2cli/ros2node")
local_path_override(module_name = "ros2param", path = "./submodules/ros2cli/ros2param")
local_path_override(module_name = "ros2pkg", path = "./submodules/ros2cli/ros2pkg")
local_path_override(module_name = "ros2run", path = "./submodules/ros2cli/ros2run")
local_path_override(module_name = "ros2service", path = "./submodules/ros2cli/ros2service")
local_path_override(module_name = "ros2test", path = "./submodules/ros_testing/ros2test")
local_path_override(module_name = "ros2topic", path = "./submodules/ros2cli/ros2topic")
local_path_override(module_name = "ros2trace", path = "./submodules/ros2_tracing/ros2trace")
local_path_override(module_name = "rosgraph_msgs", path = "./submodules/rcl_interfaces/rosgraph_msgs")
local_path_override(module_name = "rosidl_adapter_proto", path = "./submodules/rosidl_typesupport_protobuf/rosidl_adapter_proto")
local_path_override(module_name = "rosidl_adapter", path = "./submodules/rosidl/rosidl_adapter")
local_path_override(module_name = "rosidl_cli", path = "./submodules/rosidl/rosidl_cli")
local_path_override(module_name = "rosidl_cmake", path = "./submodules/rosidl/rosidl_cmake")
local_path_override(module_name = "rosidl_core_generators", path = "./submodules/rosidl_core/rosidl_core_generators")
local_path_override(module_name = "rosidl_core_runtime", path = "./submodules/rosidl_core/rosidl_core_runtime")
local_path_override(module_name = "rosidl_default_generators", path = "./submodules/rosidl_defaults/rosidl_default_generators")
local_path_override(module_name = "rosidl_default_runtime", path = "./submodules/rosidl_defaults/rosidl_default_runtime")
local_path_override(module_name = "rosidl_dynamic_typesupport_fastrtps", path = "./submodules/rosidl_dynamic_typesupport_fastrtps")
local_path_override(module_name = "rosidl_dynamic_typesupport", path = "./submodules/rosidl_dynamic_typesupport")
local_path_override(module_name = "rosidl_generator_c", path = "./submodules/rosidl/rosidl_generator_c")
local_path_override(module_name = "rosidl_generator_cpp", path = "./submodules/rosidl/rosidl_generator_cpp")
local_path_override(module_name = "rosidl_generator_py", path = "./submodules/rosidl_python/rosidl_generator_py")
local_path_override(module_name = "rosidl_generator_tests", path = "./submodules/rosidl/rosidl_generator_tests")
local_path_override(module_name = "rosidl_generator_type_description", path = "./submodules/rosidl/rosidl_generator_type_description")
local_path_override(module_name = "rosidl_parser", path = "./submodules/rosidl/rosidl_parser")
local_path_override(module_name = "rosidl_pycommon", path = "./submodules/rosidl/rosidl_pycommon")
local_path_override(module_name = "rosidl_runtime_c", path = "./submodules/rosidl/rosidl_runtime_c")
local_path_override(module_name = "rosidl_runtime_cpp", path = "./submodules/rosidl/rosidl_runtime_cpp")
local_path_override(module_name = "rosidl_runtime_py", path = "./submodules/rosidl_runtime_py")
local_path_override(module_name = "rosidl_typeadapter_protobuf_test", path = "./submodules/rosidl_typesupport_protobuf/rosidl_typeadapter_protobuf_test")
local_path_override(module_name = "rosidl_typesupport_c", path = "./submodules/rosidl_typesupport/rosidl_typesupport_c")
local_path_override(module_name = "rosidl_typesupport_cpp", path = "./submodules/rosidl_typesupport/rosidl_typesupport_cpp")
local_path_override(module_name = "rosidl_typesupport_fastrtps_c", path = "./submodules/rosidl_typesupport_fastrtps/rosidl_typesupport_fastrtps_c")
local_path_override(module_name = "rosidl_typesupport_fastrtps_cpp", path = "./submodules/rosidl_typesupport_fastrtps/rosidl_typesupport_fastrtps_cpp")
local_path_override(module_name = "rosidl_typesupport_interface", path = "./submodules/rosidl/rosidl_typesupport_interface")
local_path_override(module_name = "rosidl_typesupport_introspection_c", path = "./submodules/rosidl/rosidl_typesupport_introspection_c")
local_path_override(module_name = "rosidl_typesupport_introspection_cpp", path = "./submodules/rosidl/rosidl_typesupport_introspection_cpp")
local_path_override(module_name = "rosidl_typesupport_introspection_tests", path = "./submodules/rosidl/rosidl_typesupport_introspection_tests")
local_path_override(module_name = "rosidl_typesupport_protobuf_c", path = "./submodules/rosidl_typesupport_protobuf/rosidl_typesupport_protobuf_c")
local_path_override(module_name = "rosidl_typesupport_protobuf_cpp", path = "./submodules/rosidl_typesupport_protobuf/rosidl_typesupport_protobuf_cpp")
local_path_override(module_name = "rosidl_typesupport_protobuf", path = "./submodules/rosidl_typesupport_protobuf/rosidl_typesupport_protobuf")
local_path_override(module_name = "rosidl_typesupport_tests", path = "./submodules/rosidl_typesupport/rosidl_typesupport_tests")
local_path_override(module_name = "rpyutils", path = "./submodules/rpyutils")
local_path_override(module_name = "rti_connext_dds_cmake_module", path = "./submodules/rmw_connextdds/rti_connext_dds_cmake_module")
local_path_override(module_name = "sensor_msgs_py", path = "./submodules/common_interfaces/sensor_msgs_py")
local_path_override(module_name = "sensor_msgs", path = "./submodules/common_interfaces/sensor_msgs")
local_path_override(module_name = "service_msgs", path = "./submodules/rcl_interfaces/service_msgs")
local_path_override(module_name = "shape_msgs", path = "./submodules/common_interfaces/shape_msgs")
local_path_override(module_name = "simulation", path = "./submodules/variants/simulation")
local_path_override(module_name = "sros2_cmake", path = "./submodules/sros2/sros2_cmake")
local_path_override(module_name = "sros2", path = "./submodules/sros2/sros2")
local_path_override(module_name = "statistics_msgs", path = "./submodules/rcl_interfaces/statistics_msgs")
local_path_override(module_name = "std_msgs", path = "./submodules/common_interfaces/std_msgs")
local_path_override(module_name = "std_srvs", path = "./submodules/common_interfaces/std_srvs")
local_path_override(module_name = "stereo_msgs", path = "./submodules/common_interfaces/stereo_msgs")
local_path_override(module_name = "test_interface_files", path = "./submodules/test_interface_files")
local_path_override(module_name = "test_launch_ros", path = "./submodules/launch_ros/test_launch_ros")
local_path_override(module_name = "test_launch_testing", path = "./submodules/launch/test_launch_testing")
local_path_override(module_name = "test_msgs", path = "./submodules/rcl_interfaces/test_msgs")
local_path_override(module_name = "test_osrf_testing_tools_cpp", path = "./submodules/osrf_testing_tools_cpp/test_osrf_testing_tools_cpp")
local_path_override(module_name = "test_rmw_implementation", path = "./submodules/rmw_implementation/test_rmw_implementation")
local_path_override(module_name = "test_ros2trace", path = "./submodules/ros2_tracing/test_ros2trace")
local_path_override(module_name = "test_tf2", path = "./submodules/geometry2/test_tf2")
local_path_override(module_name = "test_tracetools_launch", path = "./submodules/ros2_tracing/test_tracetools_launch")
local_path_override(module_name = "test_tracetools", path = "./submodules/ros2_tracing/test_tracetools")
local_path_override(module_name = "tf2_bullet", path = "./submodules/geometry2/tf2_bullet")
local_path_override(module_name = "tf2_eigen_kdl", path = "./submodules/geometry2/tf2_eigen_kdl")
local_path_override(module_name = "tf2_eigen", path = "./submodules/geometry2/tf2_eigen")
local_path_override(module_name = "tf2_geometry_msgs", path = "./submodules/geometry2/tf2_geometry_msgs")
local_path_override(module_name = "tf2_kdl", path = "./submodules/geometry2/tf2_kdl")
local_path_override(module_name = "tf2_msgs", path = "./submodules/geometry2/tf2_msgs")
local_path_override(module_name = "tf2_py", path = "./submodules/geometry2/tf2_py")
local_path_override(module_name = "tf2_ros_py", path = "./submodules/geometry2/tf2_ros_py")
local_path_override(module_name = "tf2_ros", path = "./submodules/geometry2/tf2_ros")
local_path_override(module_name = "tf2_sensor_msgs", path = "./submodules/geometry2/tf2_sensor_msgs")
local_path_override(module_name = "tf2_tools", path = "./submodules/geometry2/tf2_tools")
local_path_override(module_name = "tf2", path = "./submodules/geometry2/tf2")
local_path_override(module_name = "tracetools_launch", path = "./submodules/ros2_tracing/tracetools_launch")
local_path_override(module_name = "tracetools_read", path = "./submodules/ros2_tracing/tracetools_read")
local_path_override(module_name = "tracetools_test", path = "./submodules/ros2_tracing/tracetools_test")
local_path_override(module_name = "tracetools_trace", path = "./submodules/ros2_tracing/tracetools_trace")
local_path_override(module_name = "tracetools", path = "./submodules/ros2_tracing/tracetools")
local_path_override(module_name = "trajectory_msgs", path = "./submodules/common_interfaces/trajectory_msgs")
local_path_override(module_name = "type_description_interfaces", path = "./submodules/rcl_interfaces/type_description_interfaces")
local_path_override(module_name = "unique_identifier_msgs", path = "./submodules/unique_identifier_msgs")
local_path_override(module_name = "visualization_msgs", path = "./submodules/common_interfaces/visualization_msgs")
local_path_override(module_name = "zenoh_security_tools", path = "./submodules/rmw_zenoh/zenoh_security_tools")

# C++ toolchain

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Python configuration

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)

# Use a RUST compiler known to work with Zenoh.

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = [ "1.85.0" ],
)
